--- a/public_html/wp-content/themes/onepointfive/src/scss/layout/_footer.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/layout/_footer.scss
@@ -23,6 +23,10 @@ footer#colophon {
 		padding: 0;
 		list-style: none;
 		
+		li {
+			float:left;
+			margin-right: 1em;
+		}
 		a:after {
 			content:      '\f054';
 			font-family:  "Font Awesome 5 Free";
