--- a/public_html/wp-content/themes/onepointfive/src/scss/pages/_page.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/pages/_page.scss
@@ -28,6 +28,10 @@ body {
 		font-family: 'Cabin', sans-serif;
 		text-align:center;
 	}
+	h3 {
+		font-family: 'Cabin', sans-serif;
+		color:white;		
+	}
 	IFRAME {
 		margin-bottom:2em;
 	}
