--- a/public_html/wp-content/themes/onepointfive/src/scss/layout/_header.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/layout/_header.scss
@@ -129,8 +129,12 @@ header#masthead {
 		
 		nav img{
 			width: 90%;
+			float: left;
+			margin-top: 20px;
 		}
-		
+		.fa-volume-mute {
+			display:none;
+		}
 		.menu {
 			text-align: center;
 			
