--- a/public_html/wp-content/themes/onepointfive/src/scss/layout/_header.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 header#masthead {
 	
-	background-color: rgba(20,38,49,0.8);
+	background-color: rgba(255,255,255,0.8);
 	position:         fixed;
 	z-index:          1000;
 	width:            100%;
@@ -21,10 +21,12 @@ header#masthead {
 		
 		
 		img {
-			width:  180px;
-			height: auto;
-			max-width: 180px;
+			width: 100px;
+		    height: auto;
+		    max-width: 100px;
+		    margin: 10px 10px 10px 0;
 		}
+
 		
 		ul {
 			list-style: none;
@@ -40,23 +42,23 @@ header#masthead {
 				a {
 					display:       inline-block;
 					padding:       10px 20px;
-					color:         white;
+					color:         black;
 					border-bottom: solid 2px transparent;
 					
 					&:hover{
-						color: white;
+						color:#071999;
 					}
 				}
 				
 				&.current-menu-item > a, &:hover > a, &.current-page-parent > a {
 					text-decoration: none;
-					border-color:    white;
+					border-color:    #071999;
 					transition:      all 0.25s ease;
 				}
 				
 				&.cta {
 					a {
-						border:     solid 2px white;
+						border:     solid 2px #071999;
 						background: transparent;
 						
 						&:hover {
