--- a/public_html/wp-content/themes/onepointfive/src/scss/pages/_page.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/pages/_page.scss
@@ -23,7 +23,7 @@ body {
 		margin-top:50px;
 	}
 	h2 {
-		color:#65B22E;
+		color:#1B9B05;
 		font-size: 30px;
 		font-family: 'Cabin', sans-serif;
 		text-align:center;
@@ -40,10 +40,9 @@ body {
 		font-size:0.7em;
 	}
 	a {
-		color: #1c9bd1;
-		
+		color: #1B9B05;
 		&:hover {
-			color:           $color-e;
+			color:           #071999;
 			text-decoration: none;
 		}
 	}
@@ -58,7 +57,7 @@ body {
 		-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
 		box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
 		h2 {
-			color:#1c9bd1;
+			color:#071999;
 		}
 		a  {
 			text-align:right;
