--- a/public_html/wp-content/themes/onepointfive/src/scss/layout/_header.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/layout/_header.scss
@@ -24,13 +24,13 @@ header#masthead {
 			width: 100px;
 		    height: auto;
 		    max-width: 100px;
-		    margin: 10px 10px 10px 0;
+		    margin: 10px;
 		}
 
 		
 		ul {
 			list-style: none;
-			margin:     0;
+			margin:     0 2em 0 0;
 			padding:    0;
 			display:    inline-block;
 			
