--- a/public_html/wp-content/themes/onepointfive/src/scss/modules/_mobile-menu.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/modules/_mobile-menu.scss
@@ -33,16 +33,16 @@
 
 .toggle-menu {
 	position:   fixed;
-	top: 110px; 
-    right: 50px;
+	top: 80px; 
+    right: 20px;
     font-size: 47px;
 	z-index:    10;
-	color:      white;
+	color:      black;
 	border:     none;
 	background: none;
 	box-shadow: none;
 	
 	i{
-		color: white;
+		color: black;
 	}
 }
