--- a/public_html/wp-content/themes/onepointfive/src/scss/layout/_header.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/layout/_header.scss
@@ -161,6 +161,11 @@ header#masthead {
 		}
 	}
 }
+header#masthead  nav  #mobile-menu-wrapper {
+	ul li a {
+		color:white;
+	}
+}
 .parent-pageid-4180 header#masthead nav ul li#menu-item-4192 a {
     border-bottom: 2px solid #fff;
 }
