--- a/public_html/wp-content/themes/onepointfive/src/scss/modules/_mobile-menu.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/modules/_mobile-menu.scss
@@ -8,7 +8,9 @@
 	padding-top: 30px;
 	transform:   translateX(100vw);
 	transition:  all .25s ease;
-	
+	img {
+		padding-top: 31px;
+	}
 	ul {
 		width:      100%;
 		margin-top: 40px;
