--- a/public_html/wp-content/themes/onepointfive/src/scss/layout/_footer.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/layout/_footer.scss
@@ -36,6 +36,8 @@ footer#colophon {
 		a {
 			text-decoration:underline;
 			font-weight:normal;
+			font-weight: 200;
+			font-size: 0.8em;
 		}
 	}
 
