--- a/public_html/wp-content/themes/onepointfive/src/scss/pages/_page.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/pages/_page.scss
@@ -32,17 +32,20 @@ body {
 		font-family: 'Cabin', sans-serif;
 		color:white;		
 	}
+	h4 {
+		color:white;
+	}
 	IFRAME {
 		margin-bottom:2em;
 	}
 	figcaption {
-		color:#071999;
+		color:#337CA0;
 		font-size:0.7em;
 	}
 	a {
 		color: #1B9B05;
 		&:hover {
-			color:           #071999;
+			color:           #337CA0;
 			text-decoration: none;
 		}
 	}
@@ -57,7 +60,7 @@ body {
 		-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
 		box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
 		h2 {
-			color:#071999;
+			color:#337CA0;
 		}
 		a  {
 			text-align:right;
