--- a/public_html/wp-content/themes/onepointfive/src/scss/modules/_form.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/modules/_form.scss
@@ -49,7 +49,7 @@ main#primary {
 			margin:              0 auto;
 			padding:             10px 30px 12px;
 			border-radius:       50px;
-			background:          #071999;
+			background:          #337CA0;
 			
 			background-size:     1px 500px;
 			background-position: 0 0;
