--- a/public_html/wp-content/themes/onepointfive/src/scss/modules/_bootstrap.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/modules/_bootstrap.scss
@@ -1,6 +1,7 @@
 @import 'mobile-menu';
 @import 'form';
 @import "button";
+@import "table";
 @import "blockquote";
 @import "case-studies";
 @import "partners-row";
