--- a/public_html/wp-content/themes/onepointfive/src/scss/modules/_form.scss
+++ b/public_html/wp-content/themes/onepointfive/src/scss/modules/_form.scss
@@ -70,3 +70,10 @@ main#primary {
 		}
 	}
 }
+
+#wpcf7-f4172-p4263-o1::before {
+  content: "";
+  display: block;
+  height: 300px; /* fixed header height*/
+  margin: -300px 0 0; /* negative fixed header height */
+}
